<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colozm"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/ln_logo"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/logologin_zm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size30dp">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ln_logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/size30dp"
        android:layout_marginEnd="@dimen/size30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@drawable/border_bottom"
            android:hint="@string/loginName"
            android:padding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"/>

        <EditText
            android:id="@+id/edMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@drawable/border_bottom"
            android:hint="@string/passWord"
            android:inputType="textPassword"
            android:padding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size20dp"
            android:layout_marginBottom="@dimen/size50dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#EA5656"
            android:textColor="@color/colorWhite"
            android:text="@string/Login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/size10dp"
            android:text="@string/orLoginwith"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" ">

            </TextView>
            <com.facebook.login.widget.LoginButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size10dp"
                android:layout_marginBottom="@dimen/size10dp"

                android:id="@+id/loginFacebook"
                android:src="@drawable/icon_fb_zm">

            </com.facebook.login.widget.LoginButton>

<!--            <ImageView-->
<!--                android:layout_width="@dimen/size40dp"-->
<!--                android:layout_height="@dimen/size40dp"-->
<!--                android:layout_marginTop="@dimen/size10dp"-->
<!--                android:layout_marginBottom="@dimen/size10dp"-->
<!--                android:layout_weight="1"-->
<!--                android:id="@+id/loginGoogle"-->
<!--                android:src="@drawable/icon_google_zm"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  "
                />
        </LinearLayout>

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size20dp"
            android:layout_marginTop="@dimen/size10dp"/>

    </LinearLayout>
</RelativeLayout>
